--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<!-- mariaDb -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
