--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,20 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 
+		<!-- Result -->
+		<dependency>
+    		<groupId>io.github.mj-youn</groupId>
+    		<artifactId>core</artifactId>
+    		<version>0.1.5</version>
+		</dependency>
+
+		<!-- JPA -->
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jpa</artifactId>
+    		<version>3.0.6</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
